--- a/DeAnNhom/Content/css/base.css
+++ b/DeAnNhom/Content/css/base.css
@@ -73,6 +73,8 @@ hr {
     /* 3 */
 }
 
+
+
 /*
 Add the correct text decoration in Chrome, Edge, and Safari.
 */
@@ -1901,10 +1903,13 @@ html {
     line-height: 1.25rem;
 }
 
+
+
+
     .footer > * {
         display: grid;
         place-items: start;
-        gap: 0.5rem;
+        gap: 0.0rem; /*Orignal change here from 0.5 to 0.1*/
     }
 
 @media (min-width: 48rem) {
@@ -1975,6 +1980,30 @@ html {
         -webkit-text-decoration-line: underline;
         text-decoration-line: underline;
     }
+
+.link1 {
+    cursor: pointer;
+    -webkit-text-decoration-line: underline;
+    text-decoration-line: underline;
+  
+    text-decoration: none;
+    color: rgba(0,0,0,.54);
+    display: inline-block;
+}
+
+.link-hover1 {
+    -webkit-text-decoration-line: none;
+    text-decoration-line: none;
+}
+
+    .link-hover1:hover {
+        -webkit-text-decoration-line: underline;
+        text-decoration-line: underline;
+    }
+
+
+
+
 
 .menu {
     display: flex;
@@ -2226,6 +2255,14 @@ html {
 
 .footer-title {
     margin-bottom: 0.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    opacity: 0.5;
+}
+
+
+.footer-title1 {
+   
     font-weight: 700;
     text-transform: uppercase;
     opacity: 0.5;
@@ -2850,6 +2887,10 @@ html {
     border-bottom-width: 4px;
 }
 
+.border-t-4 {
+    border-top-width: 4px;
+}
+
 .border-t-\[1px\] {
     border-top-width: 1px;
 }
@@ -2939,6 +2980,7 @@ html {
     padding: 2.5rem;
 }
 
+
 .p-5 {
     padding: 1.25rem;
 }
@@ -2991,6 +3033,13 @@ html {
 .px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
+}
+
+.pa-69 {
+    padding-left: 8.5rem;
+    padding-right: 8.5rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 .pl-2 {
