--- a/DeAnNhom/Views/Shared/Components/Footer.cshtml
+++ b/DeAnNhom/Views/Shared/Components/Footer.cshtml
@@ -1,34 +1,67 @@
-﻿<footer class="footer bg-white p-10 text-black">
-    <div>
-        <svg width="50"
-             height="50"
-             viewBox="0 0 24 24"
-             xmlns="http://www.w3.org/2000/svg"
-             fill-rule="evenodd"
-             clip-rule="evenodd"
-             class="fill-current">
-            <path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path>
-        </svg>
-        <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
-    </div>
-    <div>
-        <span class="footer-title">Services</span>
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
-    </div>
-    <div>
-        <span class="footer-title">Company</span>
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
-    </div>
-    <div>
-        <span class="footer-title">Legal</span>
-        <a class="link link-hover">Terms of use</a>
-        <a class="link link-hover">Privacy policy</a>
-        <a class="link link-hover">Cookie policy</a>
-    </div>
+﻿
+
+<footer class="footer bg-white pa-69 text-black w-full border-t-4 border-[#fe6132] ">
+
+    <section class="shopee-footer-section">
+        <h1 class="shopee-footer-section__heading"><span style="font-size:14px"><span style="font-family:Roboto,sans-serif"><span style="color:#000000"><b>SHOPEE - GÌ CŨNG CÓ, MUA HẾT Ở SHOPEE</b></span></span></span></h1>
+
+        <p class="shopee-footer-section__content"><span style="font-size:12px"><span style="font-family:Roboto,sans-serif"><span style="color:#000000"><span style="background-color:#ffffff">Shopee - ứng dụng mua sắm trực tuyến thú vị, tin cậy, an toàn và miễn phí! Shopee là nền tảng giao dịch trực tuyến hàng đầu ở Đông Nam Á, có trụ sở chính ở Singapore, đã có mặt ở khắp các khu vực&nbsp;</span></span></span><u><b><u>Singapore</u></b></u>,&nbsp;<u><b><u>Malaysia</u></b></u>,&nbsp;<u><b><u>Indonesia</u></b></u>,&nbsp;<u><b><u>Thái Lan</u></b></u>,<b>&nbsp;</b><u><b><u>Philippines</u></b>,</u>&nbsp;<u><b><u>Đài Loan</u></b></u>, <u><u><b><u>Brazil</u></b></u></u>,&nbsp;<b><u>México</u></b>,&nbsp;<b><u>Colombia</u></b>,&nbsp;<b><u>Chile</u></b>,&nbsp;<b><u>Poland</u></b>,&nbsp;<b><u>Spain</u></b>,&nbsp;<b><u>Argentina</u></b>.&nbsp;&nbsp;</span><span style="font-size:12px"><span style="font-family:Roboto,sans-serif"><span style="color:#000000"><span style="background-color:#ffffff">Với sự đảm bảo của Shopee, bạn sẽ mua hàng trực tuyến an tâm và nhanh chóng hơn bao giờ hết!</span></span></span></span></p>
+
+        <br><h2 class="shopee-footer-section__heading"><span style="font-size:12px"><span style="font-family:Roboto,sans-serif"><span style="color:#000000"><b>MUA SẮM VÀ BÁN HÀNG ONLINE ĐƠN GIẢN, NHANH CHÓNG VÀ AN TOÀN</b></span></span></span></h2>
+
+        <p class="shopee-footer-section__content"><span style="font-size:12px"><span style="font-family:Roboto,sans-serif"><span style="color:#000000">Nếu bạn đang tìm kiếm một trang web để mua và bán hàng trực tuyến thì Shopee.vn là một sự lựa chọn tuyệt vời dành cho bạn. Bản chất của Shopee là một social E-commerce platform - nền tảng trang web <b>thương mại điện tử</b> tích hợp mạng xã hội. Điều này cho phép người mua và người bán hàng dễ dàng tương tác, trao đổi thông tin về sản phẩm và chương trình khuyến mãi của shop. Nhờ nền tảng đó, việc mua bán trên Shopee trở nên nhanh chóng và đơn giản hơn. Bạn có thể trò chuyện trực tiếp với nhà bán hàng để hỏi trực tiếp về mặt hàng cần mua. Còn nếu bạn muốn tìm mua những dòng sản phẩm chính hãng, uy tín, </span></span><u><a style="color:inherit" href="Index#"><span style="font-family:Roboto,sans-serif"><b><u>Shopee Mall</u></b></span></a></u><span style="font-family:Roboto,sans-serif"><span style="color:#000000"> chính là sự lựa chọn lí tưởng dành cho bạn. Để bạn có thể dễ dàng khi tìm hiểu và sử dụng sản phẩm, </span></span><u><a style="color:inherit" href="Index/#"><span style="font-family:Roboto,sans-serif"><b><u>Shopee Blog</u></b></span></a></u><span style="font-family:Roboto,sans-serif"><u><a style="color:inherit" href="Index/#"> - <b>trang blog thông tin chính thức của Shopee</b></a></u><span style="color:#000000"> - sẽ giúp bạn có thể tìm được cho mình các kiến thức về xu hướng thời trang, review công nghệ, mẹo làm đẹp, tin tức tiêu dùng và deal giá tốt bất ngờ.</span></span></span></p>
+        <br />
+        <hr width="100%" />
+        <br />
+
+
+
+
+        <div class="middlefooter"><span style="font-size:14px"><span style="font-family:sans-serif"><span style="color:rgba(0,0,0,.54)"><b>Danh Mục</b></span></span></span></div>
+        <br />
+        <div class="footer bg-white  text-black">
+
+            <div>
+                <span class="footer-title1">ÁO KHOÁC</span>
+    <a class="link1 link-hover1">Branding</a>
+    <a class="link1 link-hover1">Design</a>
+    <a class="link1 link-hover1">Marketing</a>
+    <a class="link1 link-hover1">Advertisement</a>
+</div>
+            <div>
+                <span class="footer-title1">ĐỒNG HỒ</span>
+                <a class="link1 link-hover1">Branding</a>
+                <a class="link1 link-hover1">Design</a>
+                <a class="link1 link-hover1">Marketing</a>
+                <a class="link1 link-hover1">Advertisement</a>
+            </div>
+            <div>
+                <span class="footer-title1">ĐIỆN THOẠI</span>
+                <a class="link1 link-hover1">Branding</a>
+                <a class="link1 link-hover1">Design</a>
+                <a class="link1 link-hover1">Marketing</a>
+                <a class="link1 link-hover1">Advertisement</a>
+            </div>
+            <div>
+                <span class="footer-title1">LAPTOP</span>
+                <a class="link1 link-hover1">About us</a>
+                <a class="link1 link-hover1">Contact</a>
+                <a class="link1 link-hover1">Jobs</a>
+                <a class="link1 link-hover1">Press kit</a>
+            </div>
+            <div>
+                <span class="footer-title1">MÁY TÍNH BẢNG</span>
+                <a class="link1 link-hover1">Terms of use</a>
+                <a class="link1 link-hover1">Privacy policy</a>
+                <a class="link1 link-hover1">Cookie policy</a>
+            </div>
+        </div>
+
+
+    </section>
+
+
+
+
+
 </footer>
