--- a/DeAnNhom/Content/css/base.css
+++ b/DeAnNhom/Content/css/base.css
@@ -2268,6 +2268,17 @@ html {
     opacity: 0.5;
 }
 
+.footer-column1 {
+    float: left;
+    
+    padding: 5px;
+}
+
+
+
+
+/* Clearfix (clear floats) */
+
 .label a:hover {
     --tw-text-opacity: 1;
     color: hsl(var(--bc) / var(--tw-text-opacity));
@@ -2936,6 +2947,12 @@ html {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+
+.bg-grey12 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(230 60 17 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#fb5533\] {
     --tw-bg-opacity: 1;
     background-color: rgb(251 85 51 / var(--tw-bg-opacity));
@@ -2958,6 +2975,10 @@ html {
     --tw-gradient-from: #f63f2d;
     --tw-gradient-to: rgb(246 63 45 / 0);
     --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.indent69 {
+    padding-left: 1.7em
 }
 
 .to-\[\#fe6333\] {
@@ -3127,6 +3148,115 @@ html {
 .text-gray-400\/60 {
     color: rgb(156 163 175 / 0.6);
 }
+
+
+
+
+.pkg67p {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+    .pkg67p:hover {
+        cursor: pointer;
+    }
+
+.ebQ6br {
+    height: 5rem;
+    width: 5rem;
+    margin-right: .75rem;
+    padding: .25rem;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,.2);
+    border-radius: 2px;
+}
+
+.zLPzwH {
+    width: 4.75rem;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.PHZLSD {
+    margin-left: .8125rem;
+}
+
+.W4jGm6 {
+    width: 4.25rem;
+    height: 1rem;
+    margin-bottom: .5rem;
+    padding: .25rem;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,.2);
+    border-radius: 2px;
+    justify-content: center;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+}
+
+
+
+.Final69 {
+    font-size: .75rem;
+    color: rgba(0,0,0,.65);
+    padding: 2.625rem 0 2.3125rem;
+    background: #f5f5f5;
+    background-image: initial;
+    background-position-x: initial;
+    background-position-y: initial;
+    background-size: initial;
+    background-repeat-x: initial;
+    background-repeat-y: initial;
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+    background-color: rgb(245, 245, 245);
+}
+
+    .W4jGm6:last-child {
+        margin-bottom: 0;
+    }
+
+    .W4jGm6 img {
+        max-height: 100%;
+        max-width: 100%;
+    }
+
+.rGOyzF {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+    .rGOyzF:hover {
+        cursor: pointer;
+    }
+
+.tiIrfQ {
+    width: 5.25rem;
+    margin-top: 2rem;
+}
+
+.pkg67p, .W4jGm6 {
+    display: flex;
+}
+
+.pkg67p {
+    flex-direction: row;
+}
+
+
+
+.pkg67p {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.pkg67p:hover {
+        cursor: pointer;
+    }
+
 
 .opacity-50 {
     opacity: 0.5;
