--- a/DeAnNhom/Views/Account/Login.cshtml
+++ b/DeAnNhom/Views/Account/Login.cshtml
@@ -1,30 +1,59 @@
-﻿@{
+﻿@using DeAnNhom.Models
+@model LoginViewModel
+
+@{
     ViewBag.Title = "Đăng nhập";
     Layout = "~/Views/Shared/Layout/_AccountLayout.cshtml";
 }
 
-<section class="flex flex-col gap-7">
-    <input type="text"
-           autocomplete="on"
-           class="w-full rounded-md border border-gray-400/60 py-2 px-4 placeholder:text-sm placeholder:text-gray-600 focus:outline-none"
-           placeholder="Email/Số điện thoại/Tên đăng nhập" />
+@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "flex w-[25rem] flex-col gap-5 rounded-md bg-white p-5 text-lg font-medium text-black", role = "form" }))
+{
+@Html.AntiForgeryToken()
+<label>@ViewBag.Title</label>
 
-    <div class="flex w-full rounded-md border border-gray-400/60 py-2 px-4">
-        <input id="password"
-               type="password"
-               autocomplete="on"
-               class="w-full placeholder:text-sm placeholder:text-gray-600 focus:outline-none"
-               placeholder="Mật Khẩu" />
-        <button type="button" id="show-pass" onclick="togglePass()">
-            <i class="fa-regular fa-eye"></i>
-        </button>
+<section class="flex flex-col gap-3">
+
+    <div>
+        @Html.TextBoxFor(
+            m => m.Email,
+            new
+            {
+                @class = "w-full rounded-md border border-gray-400/60 py-2 px-4 placeholder:text-sm placeholder:text-gray-600 focus:outline-none",
+                autocomplete = "on",
+                placeholder = "Email"
+            }
+        )
+        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-red-500 text-sm" })
     </div>
 
-    <button type="submit"
-            class="w-full rounded-md bg-[#ee4d2d] py-2 text-white disabled:cursor-not-allowed disabled:bg-[#f4836c]"
-            disabled>
+    <div>
+        <div class="flex w-full rounded-md border border-gray-400/60 py-2 px-4">
+            @Html.PasswordFor(
+                m => m.Password,
+                new
+                {
+                    id = "password",
+                    @class = "w-full placeholder:text-sm placeholder:text-gray-600 focus:outline-none",
+                    autocomplete = "on",
+                    placeholder = "Mật Khẩu"
+                }
+            )
+
+            <button type="button" id="show-pass" tabindex="-1" onclick="togglePass()">
+                <i class="fa-regular fa-eye"></i>
+            </button>
+        </div>
+        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-red-500 text-sm" })
+    </div>
+
+    <button type="submit" class="w-full rounded-md bg-[#ee4d2d] py-2 text-white disabled:bg-[#f4836c]">
         Đăng Nhập
     </button>
+
+    @if (ViewBag.Error != null)
+        {
+    <span class="text-sm text-red-500"> @ViewBag.Error </span>
+        }
 </section>
 
 <section class="flex items-center gap-5 text-xs text-gray-500/60">
@@ -34,14 +63,15 @@
 </section>
 
 <section class="flex items-center gap-3 text-sm">
-    <button type="button" class="w-full border border-gray-500 border-opacity-40 py-2">Facebook</button>
-    <button type="button" class="w-full border border-gray-500 border-opacity-40 py-2">Google</button>
-    <button type="button" class="w-full border border-gray-500 border-opacity-40 py-2">Apple</button>
+    <button disabled type="button" class="w-full border border-gray-500 border-opacity-40 py-2 disabled:cursor-not-allowed">Facebook</button>
+    <button disabled type="button" class="w-full border border-gray-500 border-opacity-40 py-2 disabled:cursor-not-allowed">Google</button>
+    <button disabled type="button" class="w-full border border-gray-500 border-opacity-40 py-2 disabled:cursor-not-allowed">Apple</button>
 </section>
 
 <section class="text-center text-sm text-gray-400/60">
     Bạn mới biết đến Shopee?  @Html.ActionLink("Đăng ký", "Register", "Account", null, new { @class = "text-[#ee4d2d]" })
 </section>
+}
 
 @section script {
     <script>
