Update layout and components.

--- a/DeAnNhom/Views/Shared/Components/Footer.cshtml
+++ b/DeAnNhom/Views/Shared/Components/Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="footer bg-white p-10 text-black">
+﻿<footer class="footer bg-white p-10 text-black flex-none">
     <div>
         <svg width="50"
              height="50"
