--- a/DeAnNhom/Views/Shared/Components/Navbar.cshtml
+++ b/DeAnNhom/Views/Shared/Components/Navbar.cshtml
@@ -1,11 +1,40 @@
-﻿<header class="fixed z-50 h-28 w-screen bg-gradient-to-b from-[#f63f2d] to-[#fe6333] text-white">
+﻿@using DeAnNhom.Models
+@using Microsoft.AspNet.Identity;
+@using Microsoft.AspNet.Identity.Owin;
+
+@{
+    var currentUser = new ApplicationUser();
+    bool isSeller = false;
+
+    if (Request.IsAuthenticated)
+    {
+        var userManager = HttpContext.Current.GetOwinContext().GetUserManager<ApplicationUserManager>();
+        var roleManager = HttpContext.Current.GetOwinContext().Get<ApplicationRoleManager>();
+
+        currentUser = userManager.FindById(User.Identity.GetUserId());
+        var rolesForUser = userManager.GetRoles(currentUser.Id);
+
+        if (rolesForUser.Contains(roleManager.FindByName("Seller").Name))
+        {
+            isSeller = true;
+        }
+    }
+}
+
+<header class="fixed z-50 h-28 w-screen bg-gradient-to-b from-[#f63f2d] to-[#fe6333] text-white">
     <div class="m-auto flex h-full max-w-screen-xl flex-col py-2 px-1">
         <nav id="top-nav" class="flex justify-between text-sm">
             <div id="top-left">
                 <ul class="flex gap-2">
-                    <li><a href="#" class="hover:text-[#fbc797]"> Kênh Người Bán </a></li>
-                    <li class="border-l-2 border-gray-300/60 pl-2">
-                        <a href="#" class="hover:text-[#fbc797]"> Trở thành Người bán Shopee </a>
+                    <li>
+                        @if (Request.IsAuthenticated && isSeller)
+                        {
+                        <a href="@Url.Action("Create", "Product")" class="hover:text-[#fbc797]"> Kênh Người Bán </a>
+                        }
+                        else
+                        {
+                        <a href="@Url.Action("BecomeSeller", "Account")" class="hover:text-[#fbc797]"> Trở thành Người bán Shopee </a>
+                        }
                     </li>
                     <li class="border-l-2 border-gray-300/60 pl-2">
                         <a href="#" class="hover:text-[#fbc797]"> Tải ứng dụng </a>
@@ -20,7 +49,7 @@
                 </ul>
             </div>
             <div id="top-right">
-                <ul class="flex gap-5">
+                <ul class="flex gap-5 items-center">
                     <li>
                         <a href="#" class="hover:text-[#fbc797]"> <i class="fa-regular fa-bell"></i> Thông báo </a>
                     </li>
@@ -41,12 +70,32 @@
                         </div>
                     </li>
 
+                    @if (Request.IsAuthenticated)
+                    {
+                    <li>
+                        @using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "flex gap-2 items-center" }))
+                            {
+                        @Html.AntiForgeryToken()
+                        <a href="@Url.Action("Profile", "Account")" title="Manage" class="flex items-center justify-center gap-1">
+                            <img class="w-6 h-6 rounded-full" src="@Url.Content(currentUser.ProfileImg)" loading="lazy" />
+                            <span class="text-md"> @currentUser.Customer.Name </span>
+                        </a>
+                        <a class="border-l-[1px] border-gray-300/60 pl-2"
+                           href="javascript:document.getElementById('logoutForm').submit()">
+                            Đăng Xuất
+                        </a>
+                            }
+                    </li>
+                    }
+                    else
+                    {
                     <li>
                         <div class="flex gap-2">
-                            @Html.ActionLink("Đăng Kí", "Register", "Account")
+                            @Html.ActionLink("Đăng Ký", "Register", "Account")
                             @Html.ActionLink("Đăng Nhập", "Login", "Account", null, new { @class = "border-l-[1px] border-gray-300/60 pl-2" })
                         </div>
                     </li>
+                    }
                 </ul>
             </div>
         </nav>
@@ -54,17 +103,20 @@
             <a href="/" class="flex h-full items-center justify-center text-4xl">Shopee</a>
             <div id="right" class="flex h-full w-full items-center justify-between">
                 <div class="w-11/12 rounded-md border-2 border-transparent p-1 focus-within:border-black">
-                    <div class="flex w-full gap-2 rounded-sm bg-white p-1 pl-4">
-                        <input type="text" class="w-full text-black focus:outline-none" placeholder="Type something to search" />
-                        <button class="rounded-sm bg-[#fb5533] py-1 px-5">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </button>
-                    </div>
+                    @using (Html.BeginForm("Index", "Product", FormMethod.Get, new { @class = "flex w-full gap-2 rounded-md bg-white p-1 pl-4" }))
+                    {
+                    <input type="text" class="w-full text-black focus:outline-none" placeholder="Type something to search" name="name" />
+                    <button class="rounded-md bg-[#fb5533] py-1 px-5" type="submit">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                    }
                 </div>
 
-                <button class="btn btn-ghost">
-                    <i class="fa-solid fa-cart-shopping text-xl"></i>
-                </button>
+                <a class="btn btn-ghost" href="@Url.Action("ShowCart", "Cart")">
+                    <i class="fa-solid fa-cart-shopping text-xl indicator text-2xl">
+                        @{ Html.RenderAction("BadgeCart", "Cart"); }
+                    </i>
+                </a>
             </div>
         </nav>
     </div>
