--- a/DeAnNhom/Views/Shared/Components/Footer.cshtml
+++ b/DeAnNhom/Views/Shared/Components/Footer.cshtml
@@ -1,34 +1,228 @@
-﻿<footer class="footer bg-white p-10 text-black flex-none">
-    <div>
-        <svg width="50"
-             height="50"
-             viewBox="0 0 24 24"
-             xmlns="http://www.w3.org/2000/svg"
-             fill-rule="evenodd"
-             clip-rule="evenodd"
-             class="fill-current">
-            <path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path>
-        </svg>
-        <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
-    </div>
-    <div>
-        <span class="footer-title">Services</span>
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
-    </div>
-    <div>
-        <span class="footer-title">Company</span>
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
-    </div>
-    <div>
-        <span class="footer-title">Legal</span>
-        <a class="link link-hover">Terms of use</a>
-        <a class="link link-hover">Privacy policy</a>
-        <a class="link link-hover">Cookie policy</a>
+﻿<footer class="footer px-4 py-10 bg-white w-full border-t-4 border-[#fe6132]">
+    <div class="max-w-screen-xl m-auto flex flex-col gap-5">
+        <section id="Shoppy-Info" class="flex flex-col gap-5">
+            <div>
+                <h1 class="text-lg font-bold w-full text-center pb-3">
+                    SHOPPY - GÌ CŨNG CÓ, MUA HẾT Ở SHOPPY
+                </h1>
+                <p class="text-center">
+                    Shoppy - ứng dụng mua sắm trực tuyến thú vị, tin cậy, an toàn và miễn phí!
+                    Shoppy là nền tảng giao dịch trực tuyến hàng đầu ở Đông Nam Á, có trụ sở chính ở Singapore,
+                    đã có mặt ở khắp các khu vực Singapore, Malaysia, Indonesia, Thái Lan, Philippines, Đài Loan, Brazil, México, Colombia, Chile, Poland, Spain, Argentina.
+                    Với sự đảm bảo của Shoppy, bạn sẽ mua hàng trực tuyến an tâm và nhanh chóng hơn bao giờ hết!
+                </p>
+            </div>
+
+            <div>
+                <h2 class="text-lg font-bold w-full text-center pb-3">
+                    MUA SẮM VÀ BÁN HÀNG ONLINE ĐƠN GIẢN, NHANH CHÓNG VÀ AN TOÀN
+                </h2>
+                <p class="text-center">
+                    Nếu bạn đang tìm kiếm một trang web để mua và bán hàng trực tuyến thì Shoppy là một sự lựa chọn tuyệt vời dành cho bạn.
+                    Bản chất của Shoppy là một social E-commerce platform - nền tảng trang web <b> thương mại điện tử </b> tích hợp mạng xã hội.
+                    Điều này cho phép người mua và người bán hàng dễ dàng tương tác, trao đổi thông tin về sản phẩm và chương trình khuyến mãi của shop.
+                    Nhờ nền tảng đó, việc mua bán trên Shoppy trở nên nhanh chóng và đơn giản hơn. Bạn có thể trò chuyện trực tiếp với nhà bán hàng để hỏi trực tiếp về mặt hàng cần mua.
+                    Còn nếu bạn muốn tìm mua những dòng sản phẩm chính hãng, uy tín, Shoppy Mall chính là sự lựa chọn lí tưởng dành cho bạn.
+                    Để bạn có thể dễ dàng khi tìm hiểu và sử dụng sản phẩm,
+                    Shoppy Blog trang blog thông tin chính thức của Shoppy - sẽ giúp bạn có thể tìm được cho mình các kiến thức về xu hướng thời trang,
+                    review công nghệ, mẹo làm đẹp, tin tức tiêu dùng và deal giá tốt bất ngờ.
+                </p>
+            </div>
+        </section>
+
+        <hr width="100%" />
+
+        <section id="Category" class="w-full">
+            <div class="w-full flex justify-between items-center">
+                <div class="flex flex-col gap-2">
+                    <h4 class="font-bold">ÁO KHOÁC</h4>
+                    <div class="flex flex-col [&>a]:before:content-['-'] [&>a]:before:pr-2">
+                        <a class="link1 link-hover1">Branding</a>
+                        <a class="link1 link-hover1">Design</a>
+                        <a class="link1 link-hover1">Marketing</a>
+                    </div>
+                </div>
+                <div class="flex flex-col gap-2">
+                    <h4 class="font-bold">ĐỒNG HỒ</h4>
+                    <div class="flex flex-col [&>a]:before:content-['-'] [&>a]:before:pr-2">
+                        <a class="link1 link-hover1">Branding</a>
+                        <a class="link1 link-hover1">Design</a>
+                        <a class="link1 link-hover1">Marketing</a>
+                    </div>
+                </div>
+                <div class="flex flex-col gap-2">
+                    <h4 class="font-bold">ĐIỆN THOẠI</h4>
+                    <div class="flex flex-col [&>a]:before:content-['-'] [&>a]:before:pr-2">
+                        <a class="link1 link-hover1">Branding</a>
+                        <a class="link1 link-hover1">Design</a>
+                        <a class="link1 link-hover1">Marketing</a>
+                    </div>
+                </div>
+                <div class="flex flex-col gap-2">
+                    <h4 class="font-bold">LAPTOP</h4>
+                    <div class="flex flex-col [&>a]:before:content-['-'] [&>a]:before:pr-2">
+                        <a class="link1 link-hover1">About us</a>
+                        <a class="link1 link-hover1">Contact</a>
+                        <a class="link1 link-hover1">Press kit</a>
+                    </div>
+                </div>
+                <div class="flex flex-col gap-2">
+                    <h4 class="font-bold">MÁY TÍNH BẢNG</h4>
+                    <div class="flex flex-col [&>a]:before:content-['-'] [&>a]:before:pr-2">
+                        <a class="link1 link-hover1">Terms of use</a>
+                        <a class="link1 link-hover1">Privacy policy</a>
+                        <a class="link1 link-hover1">Cookie policy</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <hr width="100%" />
+
+        <section id="Shoppy-MoreInfo" class="w-full flex justify-between items-start">
+            <div class="flex flex-col gap-2">
+                <h4 class="font-bold">
+                    CHĂM SÓC KHÁCH HÀNG
+                </h4>
+                <div class="flex flex-col [&>a]:before:content-['-'] [&>a]:before:pr-2">
+                    <a class="link1 link-hover1">Branding</a>
+                    <a class="link1 link-hover1">Design</a>
+                    <a class="link1 link-hover1">Marketing</a>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2">
+                <h4 class="font-bold">
+                    VỀ SHOPPY
+                </h4>
+                <div class="flex flex-col [&>a]:before:content-['-'] [&>a]:before:pr-2">
+                    <a class="link1 link-hover1">Branding</a>
+                    <a class="link1 link-hover1">Design</a>
+                    <a class="link1 link-hover1">Marketing</a>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2">
+                <h4 class="font-bold">
+                    THANH TOÁN
+                </h4>
+                <div>
+                    <div id="banner" style="overflow: hidden; justify-content: space-around;">
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/d4bbea4570b93bfd5fc652ca82a262a8">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/a0a9062ebe19b45c1ae0506f16af5c16">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/38fd98e55806c3b2e4535c4e4a6c4c08">
+                        </div>
+                    </div>
+                    <div id="banner" style="overflow: hidden; justify-content: space-around;">
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/bc2a874caeee705449c164be385b796c">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/2c46b83d84111ddc32cfd3b5995d9281">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/5e3f0bee86058637ff23cfdf2e14ca09">
+                        </div>
+                    </div>
+                    <div id="banner" style="overflow: hidden; justify-content: space-around;">
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/9263fa8c83628f5deff55e2a90758b06">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/0217f1d345587aa0a300e69e2195c492">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2">
+                <h4 class="font-bold">
+                    ĐƠN VỊ VẬN CHUYỂN
+                </h4>
+                <div>
+                    <div id="banner" style="overflow: hidden; justify-content: space-around;">
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/5e7282bd0f7ee0872fdb0bd1d40fbe9e">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/d10b0ec09f0322f9201a4f3daf378ed2">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/77bf96a871418fbc21cc63dd39fb5f15">
+                        </div>
+                    </div>
+                    <div id="banner" style="overflow: hidden; justify-content: space-around;">
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/59270fb2f3fbb7cbc92fca3877edde3f">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/957f4eec32b963115f952835c779cd2c">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/0d349e22ca8d4337d11c9b134cf9fe63">
+                        </div>
+                    </div>
+                    <div id="banner" style="overflow: hidden; justify-content: space-around;">
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/3900aefbf52b1c180ba66e5ec91190e5">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/6e3be504f08f88a15a28a9a447d94d3d">
+                        </div>
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/b8348201b4611fc3315b82765d35fc63">
+                        </div>
+                    </div>
+                    <div id="banner" style="overflow: hidden; justify-content: space-around;">
+                        <div class="" style="display: inline-block; box-shadow: 0 3px 3px rgba(0,0,0,.2); margin-bottom: 0.5rem; margin-right: 0.5rem; ">
+                            <img src="https://cf.shopee.vn/file/864825c06b9f2c8c9334ebdeafa1f0fb">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex flex-col gap-2">
+                <h4 class="font-bold">
+                    THÀNH VIÊN NHÓM
+                </h4>
+                <div class="flex flex-col gap-2">
+                    <div class="flex items-center justify-between gap-2">
+                        <span> Phùng Tấn Phát </span>
+                        <span class="before:content-['-'] before:pr-2"> 21DH113966 </span>
+                    </div>
+                    <div class="flex items-center justify-between gap-2">
+                        <span> Phan Nhật Nam </span>
+                        <span class="before:content-['-'] before:pr-2"> 21DH113898 </span>
+                    </div>
+                    <div class="flex items-center justify-between gap-2">
+                        <span> Trần Minh Long </span>
+                        <span class="before:content-['-'] before:pr-2"> 21DH111136 </span>
+                    </div>
+                    <div class="flex items-center justify-between gap-2">
+                        <span> Phạm Huỳnh Anh Tuấn </span>
+                        <span class="before:content-['-'] before:pr-2"> 21DH114269 </span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <hr width="100%" />
+
+        <section id="Copyright" class="w-full flex gap-5 pt-5 justify-center items-center">
+            <h1 class="text-gray-600">
+                CHÍNH SÁCH BẢO MẬT
+            </h1>
+            <h1 class="text-gray-600">
+                QUY CHẾ HOẠT ĐỘNG
+            </h1>
+            <h1 class="text-gray-600">
+                CHÍNH SÁCH VẬN CHUYỂN
+            </h1>
+            <h1 class="text-gray-600">
+                CHÍNH SÁCH TRẢ HÀNG VÀ HOÀN TIỀN
+            </h1>
+        </section>
     </div>
 </footer>
