--- a/DeAnNhom/Views/Shared/Components/Footer.cshtml
+++ b/DeAnNhom/Views/Shared/Components/Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="footer px-4 py-10 bg-white w-full border-t-4 border-[#fe6132]">
+﻿<footer class="footer px-4 py-10 bg-white text-black w-full border-t-4 border-[#fe6132]">
     <div class="max-w-screen-xl m-auto flex flex-col gap-5">
         <section id="Shoppy-Info" class="flex flex-col gap-5">
             <div>
