--- a/DeAnNhom/Views/Shared/Layout/_AccountLayout.cshtml
+++ b/DeAnNhom/Views/Shared/Layout/_AccountLayout.cshtml
@@ -15,7 +15,7 @@
     <header class="h-20 flex-[0_1_auto] bg-white">
         <nav class="m-auto flex h-full max-w-screen-xl items-center justify-between py-2 px-1 text-[#ee4d2d]">
             <div class="flex h-full items-center gap-5">
-                <a class="text-3xl font-medium" href="/">Shopee</a>
+                <a class="text-3xl font-medium" href="/">Shoppy</a>
                 <span class="text-xl font-medium text-black">@ViewBag.Title</span>
             </div>
             <div>
