--- a/DeAnNhom/Views/Shared/Layout/_CartLayout.cshtml
+++ b/DeAnNhom/Views/Shared/Layout/_CartLayout.cshtml
@@ -50,7 +50,7 @@
                         }
                         else
                         {
-                        <li> <a href="@Url.Action("BecomeSeller", "Account")" class="hover:text-[#fbc797]"> Trở thành Người bán Shopee </a> </li>
+                        <li> <a href="@Url.Action("BecomeSeller", "Account")" class="hover:text-[#fbc797]"> Trở thành Người bán Shoppy </a> </li>
                         }
                         <li class="border-l-2 border-gray-300/60 pl-2">
                             <a href="#" class="hover:text-[#fbc797]"> Tải ứng dụng </a>
