--- a/DeAnNhom/Views/Errors/Unauthorization.cshtml
+++ b/DeAnNhom/Views/Errors/Unauthorization.cshtml
@@ -4,7 +4,7 @@
 }
 
 <section class="max-w-screen-xl m-auto text-center pt-10">
-    <div class="bgw-full bg-white text-xl flex flex-col gap-10 py-5">
+    <div class="bgw-full bg-white rounded-lg px-6 text-xl flex flex-col gap-10 py-5">
         <h1 class="text-4xl text-red-500">401 Unauthorization</h1>
         <span>
             Sorry but you don't have premission to access this page.
